PR 21417, ar arg check failure

PR 21417
	* ar.c (main): Check that an archive file is given after options.